test/corpus/delimiting_modifiers.txt
================================================================================
Standalone strong paragraph delimiter
================================================================================
==

--------------------------------------------------------------------------------

(document
  (strong_delimiting_modifier))

================================================================================
Longer strong paragraph delimiter
================================================================================
===

--------------------------------------------------------------------------------

(document
  (strong_delimiting_modifier))

================================================================================
Very long strong paragraph delimiter
================================================================================
=============================

--------------------------------------------------------------------------------

(document
  (strong_delimiting_modifier))

================================================================================
Weak Paragraph Delimiter
================================================================================
* This is a heading
  This is the heading's content.
  --
This is no longer the heading's content.

--------------------------------------------------------------------------------

(document
  (heading1
    (paragraph_segment)
    (paragraph
      (paragraph_segment))
    (weak_delimiting_modifier))
  (paragraph
    (paragraph_segment)))

================================================================================
Strong Paragraph Delimiter
================================================================================
* This is a heading
  Content.
*** This is a level 3 heading
    More content.
    ===
Part of nothing.

--------------------------------------------------------------------------------

(document
  (heading1
    (paragraph_segment)
    (paragraph
      (paragraph_segment))
    (heading3
      (paragraph_segment)
      (paragraph
        (paragraph_segment))))
  (strong_delimiting_modifier)
  (paragraph
    (paragraph_segment)))
